[TECH] fix icons alignment

--- a/ui.apps/src/main/content/jcr_root/apps/etoolbox-backpack/assets/clientlibs/backpackcoral/css/styles.css
+++ b/ui.apps/src/main/content/jcr_root/apps/etoolbox-backpack/assets/clientlibs/backpackcoral/css/styles.css
@@ -16,6 +16,7 @@ coral-icon:is([icon="backpack"], [icon="backpack-sites"]) {
 }
 
 coral-icon[icon="backpack"] {
+    transform: translateY(-0.75rem);
     height: 3rem;
     width: 3rem;
 }
